[gd_scene load_steps=22 format=3 uid="uid://bd0fika4hyhvw"]

[ext_resource type="Theme" uid="uid://dpequqav4rjaf" path="res://addons/popochiu/engine/objects/gui/resources/base_gui_theme.tres" id="1_5somw"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/gui/templates/9_verb/9_verb_gui.gd" id="2_6nea2"]
[ext_resource type="Texture2D" uid="uid://d0fwvj88bhggm" path="res://addons/popochiu/engine/objects/gui/templates/9_verb/images/9verb_cursor.png" id="3_fpt6m"]
[ext_resource type="PackedScene" uid="uid://bn7o13nv11ka1" path="res://addons/popochiu/engine/objects/gui/components/dialog_text/dialog_overhead/dialog_overhead.tscn" id="5_gejku"]
[ext_resource type="PackedScene" uid="uid://bdgs3xsbq3gdd" path="res://addons/popochiu/engine/objects/gui/components/system_text/system_text.tscn" id="5_ygb3y"]
[ext_resource type="PackedScene" uid="uid://cuokybjvunmhq" path="res://addons/popochiu/engine/objects/gui/templates/9_verb/components/9_verb_panel/9_verb_panel.tscn" id="6_tiq5g"]
[ext_resource type="PackedScene" uid="uid://dhsfl8ot4j5fj" path="res://addons/popochiu/engine/objects/gui/components/dialog_menu/dialog_menu.tscn" id="7_ypv20"]
[ext_resource type="PackedScene" uid="uid://esorelppu4hw" path="res://addons/popochiu/engine/objects/gui/components/hover_text/hover_text.tscn" id="9_pfhkt"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/gui/templates/9_verb/components/9_verb_hover_text/9_verb_hover_text.gd" id="10_kg6cq"]
[ext_resource type="PackedScene" uid="uid://crla6to4mm0p7" path="res://addons/popochiu/engine/objects/gui/templates/9_verb/components/settings_popup/9_verb_settings_popup.tscn" id="11_etexu"]
[ext_resource type="PackedScene" uid="uid://cndputybyj57n" path="res://addons/popochiu/engine/objects/gui/components/popups/save_and_load_popup/save_and_load_popup.tscn" id="12_q44n2"]
[ext_resource type="PackedScene" uid="uid://dfrsiyyqncspo" path="res://addons/popochiu/engine/objects/gui/components/popups/history_popup/history_popup.tscn" id="13_780pa"]
[ext_resource type="PackedScene" uid="uid://dv1gec8q4h6b7" path="res://addons/popochiu/engine/objects/gui/templates/9_verb/components/quit_popup/9_verb_quit_popup.tscn" id="14_0vlip"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ckh2"]
atlas = ExtResource("3_fpt6m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jysoy"]
atlas = ExtResource("3_fpt6m")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2brv"]
atlas = ExtResource("3_fpt6m")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flm5d"]
atlas = ExtResource("3_fpt6m")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwabf"]
atlas = ExtResource("3_fpt6m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpmp7"]
atlas = ExtResource("3_fpt6m")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0twu0"]
atlas = ExtResource("3_fpt6m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xtf0b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ckh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jysoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2brv")
}],
"loop": true,
"name": &"active",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flm5d")
}],
"loop": true,
"name": &"gui",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwabf")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpmp7")
}],
"loop": true,
"name": &"wait",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0twu0")
}],
"loop": true,
"name": &"walk_to",
"speed": 5.0
}]

[node name="9VerbGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_5somw")
script = ExtResource("2_6nea2")

[node name="Cursor" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_xtf0b")
animation = &"active"

[node name="9VerbPanel" parent="." instance=ExtResource("6_tiq5g")]
unique_name_in_owner = true
layout_mode = 1

[node name="DialogOverhead" parent="." instance=ExtResource("5_gejku")]
layout_mode = 1

[node name="DialogMenu" parent="." instance=ExtResource("7_ypv20")]
visible = false
layout_mode = 1

[node name="HoverTextCursor" parent="." instance=ExtResource("9_pfhkt")]
unique_name_in_owner = true
layout_mode = 1
size_flags_vertical = 3
script = ExtResource("10_kg6cq")
follows_cursor = true

[node name="SystemText" parent="." instance=ExtResource("5_ygb3y")]
layout_mode = 1

[node name="Popups" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="9VerbSettingsPopup" parent="Popups" instance=ExtResource("11_etexu")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SaveAndLoadPopup" parent="Popups" instance=ExtResource("12_q44n2")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="HistoryPopup" parent="Popups" instance=ExtResource("13_780pa")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="9VerbQuitPopup" parent="Popups" instance=ExtResource("14_0vlip")]
unique_name_in_owner = true
visible = false
layout_mode = 1
